tests/macros/confirm/mask.rs
fn main() {
    let q = requestty::questions![Confirm { mask: todo!() }];
}
